add sentinel comment

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Clare Rickerby Botanist & Bryologist</title>
         <link rel="stylesheet" type="text/css" href="style/style.css" />
+	<!--ghp-->
     </head>
     
     <body>  
